--- a/client/trackpack/src/views/tracking/packages.css
+++ b/client/trackpack/src/views/tracking/packages.css
@@ -1,13 +1,13 @@
-.orderContainer {
+/* .orderContainer {
   border-radius: 45px;
   background-color: #124559;
   width: auto;
   position: relative;
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-}
+} */
 .content {
   display: flex;
   flex-direction: column;
@@ -30,14 +30,14 @@
   width: 66vw;
   margin-bottom: 15px;
 }
-.htext {
+/* .htext {
   display: flex;
   color: white;
-  /* position: absolute; */
+  position: absolute;
   top: 80px;
   left: 80px;
   font-size: 35px;
-}
+ }  */
 
 p {
   position: absolute;
